--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,59 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&display=swap');
+
+@font-face {
+  font-family: 'Gotham Pro';
+  src: url('/fonts/GothamPro/GothamProLight.woff') format('woff'),
+    url('/fonts/GothamPro/GothamProLight.ttf') format('truetype'),
+    url('/fonts/GothamPro/GothamProLight.eot') format('embedded-opentype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Gotham Pro';
+  src: url('/fonts/GothamPro/GothamProRegular.woff') format('woff'),
+    url('/fonts/GothamPro/GothamProRegular.ttf') format('truetype'),
+    url('/fonts/GothamPro/GothamProRegular.eot') format('embedded-opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Century Gothic';
+  src: url('/fonts/CenturyGothic/CenturyGothic.woff') format('woff'),
+    url('/fonts/CenturyGothic/CenturyGothic.ttf') format('truetype'),
+    url('/fonts/CenturyGothic/CenturyGothic.eot') format('embedded-opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Century Gothic';
+  src: url('/fonts/CenturyGothic/CenturyGothicBold.woff') format('woff'),
+    url('/fonts/CenturyGothic/CenturyGothicBold.ttf') format('truetype'),
+    url('/fonts/CenturyGothic/CenturyGothicBold.eot') format('embedded-opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Adobe Garamond Pro';
+  src: url('/fonts/AdobeGaramondPro/AdobeGaramondProRegular.woff') format('woff'),
+    url('/fonts/AdobeGaramondPro/AdobeGaramondProRegular.ttf') format('truetype'),
+    url('/fonts/AdobeGaramondPro/AdobeGaramondProRegular.eot') format('embedded-opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+:root {
+  --white: #ffffff;
+  --golden: #be8900;
+  --dark-bg: #1a1a1a;
+  --light-grey: #c0c0c0;
+  --default-text: #828282;
+  --main: #262626;
+}
+
 *,
 *::before,
 *::after {
@@ -11,8 +67,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Century Gothic', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -21,12 +77,12 @@ body {
   overscroll-behavior-y: none;
 
   text-rendering: optimizeSpeed;
-  color: #1c1c1c;
+  color: var(--white, #ffffff);
   line-height: normal;
   font-weight: 400;
   font-size: 18px;
 
-  background-color: #ffffff;
+  background-color: var(--dark-bg, #1a1a1a);
 }
 
 main {
