--- a/src/components/ui/Accordion/Accordion.module.scss
+++ b/src/components/ui/Accordion/Accordion.module.scss
@@ -1,24 +1,7 @@
-.item {
-}
+@import '@/styles/mixins';
+@import '@/styles/variables';
 
-.header {
+.list {
   display: flex;
-  align-items: center;
-}
-
-.title {
-  color: var(--white, #ffffff);
-  font-family: 'Cormorant Unicase';
-  font-size: 24px;
-  font-weight: 600;
-  line-height: 1.2;
-  text-transform: uppercase;
-}
-
-.body {
-}
-
-.content {
-  color: var(--white, #ffffff);
-  line-height: 1.2;
+  flex-direction: column;
 }
