--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -15,3 +15,10 @@
     padding-inline: 48px;
   }
 }
+
+.wrapper {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+  justify-content: space-between;
+}
