--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,15 @@
+$duration-xs: 100ms;
+$duration-sm: 200ms;
+$duration-md: 300ms;
+$duration-lg: 600ms;
+
+$easing-common: ease-in-out;
+
+$font-gotham-pro: 'Gotham Pro', sans-serif;
+$font-century-gothic: 'Century Gothic', sans-serif;
+$font-adobe-garamond-pro: 'Adobe Garamond Pro', serif;
+$font-cormorant-unicase: 'Cormorant Unicase', serif;
+
 $screen-mobile: 320px;
 $screen-tablet: 768px;
 $screen-desktop-lg: 1280px;
