--- a/src/components/common/NavList/components/NavItem/NavItem.module.scss
+++ b/src/components/common/NavList/components/NavItem/NavItem.module.scss
@@ -29,6 +29,7 @@
   font-family: $font-gotham-pro;
   font-size: 30px;
   text-transform: uppercase;
+  line-height: normal;
 
   transition: color $duration-sm $easing-common;
   cursor: pointer;
