--- a/src/modules/menu/index.module.scss
+++ b/src/modules/menu/index.module.scss
@@ -94,7 +94,7 @@
   flex-direction: column;
 
   width: 100%;
-  height: 100lvh;
+  height: 100dvh;
 
   background-color: var(--dark-bg, #1a1a1a);
 
