--- a/src/scenes/Home/Hero/index.module.scss
+++ b/src/scenes/Home/Hero/index.module.scss
@@ -2,8 +2,6 @@
 @import '@/styles/variables';
 
 .section {
-  position: relative;
-
   padding-block: 32px;
 }
 
@@ -20,7 +18,7 @@
   align-items: center;
   justify-content: center;
 
-  height: calc(100lvh - 32px * 2);
+  height: calc(100dvh - 32px * 2);
   min-height: 720px;
 
   @include desktop-lg {
@@ -71,28 +69,34 @@
   & > span:has(+ span) {
     font-family: $font-cormorant-unicase;
     font-size: 2.125rem;
-    font-size: clamp-calc($screen-mobile, $screen-desktop-lg, 34px, 72px);
     font-weight: 500;
-    letter-spacing: 1px;
+    letter-spacing: 0.03em;
   }
 
   & > span + span {
     font-family: $font-gotham-pro;
     font-weight: 400;
     font-size: 1rem;
-    font-size: clamp-calc($screen-mobile, $screen-desktop-lg, 16px, 32px);
-    letter-spacing: 5px;
+    letter-spacing: 0.3em;
+  }
+
+  @include tablet {
+    & > span:has(+ span) {
+      font-size: 3rem;
+    }
+
+    & > span + span {
+      font-size: 1.5rem;
+    }
   }
 
   @include desktop-lg {
     & > span:has(+ span) {
       font-size: 4.5rem;
-      font-size: clamp-calc($screen-desktop-lg, $screen-desktop-xxl, 72px, 117px);
     }
 
     & > span + span {
       font-size: 2rem;
-      font-size: clamp-calc($screen-desktop-lg, $screen-desktop-xxl, 32px, 56px);
     }
   }
 }
@@ -196,6 +200,7 @@
     position: fixed;
     top: 280px;
     right: 25px;
+    z-index: 300;
 
     width: 400px;
     rotate: -90deg;
