--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -52,7 +52,8 @@
 @mixin button {
   cursor: pointer;
 
-  transition: color $duration-sm $easing-common, background-color $duration-sm $easing-common;
+  transition: color $duration-sm $easing-common, border-color $duration-sm $easing-common,
+    background-color $duration-sm $easing-common;
 
   &:is(:disabled) {
     cursor: not-allowed;
@@ -71,6 +72,13 @@
   }
 }
 
+@mixin image-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
 @function clamp-calc($min-width, $max-width, $size-at-min-width, $size-at-max-width) {
   $slope: ($size-at-max-width - $size-at-min-width) / ($max-width - $min-width);
   $y-axis-intersection: -1 * $min-width * $slope + $size-at-min-width;
@@ -80,9 +88,4 @@
     #{$size-at-max-width}
   );
   @return $return-value;
-}
-
-@mixin responsive-font($min-width, $max-width, $min-size, $max-size) {
-  font-size: $min-size;
-  font-size: clamp-calc($min-width, $max-width, $min-size, $max-size);
 }
