--- a/src/components/ui/Link/Link.module.scss
+++ b/src/components/ui/Link/Link.module.scss
@@ -5,8 +5,8 @@
   display: flex;
   gap: 32px;
 
-  padding-top: 8px;
-  padding-left: 24px;
+  padding-top: 0.5rem;
+  padding-left: 1.5rem;
 
   width: fit-content;
 
@@ -27,15 +27,21 @@
 
 .link.fullWidth {
   width: 100%;
+  justify-content: space-between;
 }
 
 .label {
   color: currentColor;
   font-family: $font-cormorant-unicase;
-  font-size: 22px;
+  font-size: 1.375rem;
   font-weight: 700;
+
+  @include desktop-lg {
+    font-size: 3.125rem;
+  }
 }
 
 .iconWrapper {
   @include flex-center;
+  align-self: flex-end;
 }
