--- a/src/modules/home-page/grab-and-go/index.module.scss
+++ b/src/modules/home-page/grab-and-go/index.module.scss
@@ -62,6 +62,13 @@
   @include tablet {
     max-width: 500px;
   }
+
+  @include desktop-lg {
+    gap: 290px;
+
+    height: 100%;
+    justify-content: flex-end;
+  }
 }
 
 .subtitle {
