--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -79,6 +79,12 @@
   object-position: center;
 }
 
+@mixin bg-cover {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 @function clamp-calc($min-width, $max-width, $size-at-min-width, $size-at-max-width) {
   $slope: ($size-at-max-width - $size-at-min-width) / ($max-width - $min-width);
   $y-axis-intersection: -1 * $min-width * $slope + $size-at-min-width;
