--- a/src/modules/home-page/about/index.module.scss
+++ b/src/modules/home-page/about/index.module.scss
@@ -2,6 +2,10 @@
 @import '@/styles/variables';
 
 .section {
+  @include bg-cover;
+  padding-top: 148px;
+  padding-bottom: 40px;
+
   background-color: #c7c7c7;
   background-image: url('../../../assets/images/home/about/about-bg.jpg');
 
@@ -25,6 +29,11 @@
     bottom: 0;
     background: linear-gradient(0deg, #000 0%, rgba(0, 0, 0, 0) 100%);
   }
+
+  @include tablet {
+    padding-top: 64px;
+    padding-bottom: 64px;
+  }
 }
 
 .container {
@@ -37,15 +46,12 @@
   position: relative;
   z-index: 2;
 
-  padding-top: 148px;
-  padding-bottom: 40px;
-  min-height: 880px;
-  height: 100lvh;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 36px;
+
+  height: 100%;
 
   @include tablet {
     flex-direction: row;
