--- a/src/modules/home-page/events/index.module.scss
+++ b/src/modules/home-page/events/index.module.scss
@@ -5,9 +5,17 @@ $frame-width: 780px;
 $frame-height: 370px;
 
 .section {
+  padding-top: 50px;
+  padding-bottom: 230px;
+
+  @include desktop-lg {
+    padding-bottom: 60px;
+  }
+
   &::after {
     content: '';
     @include square(100%);
+    @include bg-cover;
     position: absolute;
     top: 0;
     left: 0;
@@ -15,12 +23,7 @@ $frame-height: 370px;
 
     display: block;
 
-    background-color: red;
-
     background-image: url('../../../assets/images/home/catering-and-events/bg.jpg');
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
 
     @include desktop-lg {
       clip-path: polygon(
@@ -38,10 +41,10 @@ $frame-height: 370px;
 }
 
 .container {
-  padding-inline: 1.5rem;
+  padding-inline: 24px;
 
   @include desktop-lg {
-    padding-inline: 3rem;
+    padding-inline: 48px;
   }
 }
 
@@ -51,15 +54,7 @@ $frame-height: 370px;
   justify-content: flex-start;
   flex-direction: column;
 
-  padding-top: 50px;
-  padding-bottom: 230px;
-  height: 100dvh;
-  min-height: 800px;
-
-  @include desktop-lg {
-    padding-bottom: 60px;
-    min-height: 900px;
-  }
+  height: 100%;
 }
 
 .content {
@@ -68,7 +63,23 @@ $frame-height: 370px;
   justify-content: space-between;
   gap: 24px;
 
-  max-width: 500px;
+  width: min(100%, 500px);
+  height: 100%;
+
+  @include desktop-lg {
+    position: absolute;
+    bottom: 0;
+    right: 46px;
+
+    align-items: flex-end;
+    justify-content: flex-end;
+
+    padding-left: 103px;
+    padding-right: 176px;
+    padding-block: 62px;
+    width: min(100%, $frame-width);
+    height: fit-content;
+  }
 }
 
 .title {
@@ -86,4 +97,20 @@ $frame-height: 370px;
 }
 
 .descriptionWrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+  margin-block: auto;
+
+  @include desktop-lg {
+    margin-block: 0;
+  }
+}
+
+.link {
+  align-self: flex-end;
+
+  @include desktop-lg {
+    align-self: auto;
+  }
 }
