--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -85,6 +85,14 @@
   background-size: cover;
 }
 
+@mixin text-overflow {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+
+  min-width: 0px;
+}
+
 @function clamp-calc($min-width, $max-width, $size-at-min-width, $size-at-max-width) {
   $slope: ($size-at-max-width - $size-at-min-width) / ($max-width - $min-width);
   $y-axis-intersection: -1 * $min-width * $slope + $size-at-min-width;
