--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -67,3 +67,11 @@ html.lenis body {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+.bgWrapper.about {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%),
+    url('../assets/images/about/footer-bg.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
