--- a/src/modules/about-us-page/menu/index.module.scss
+++ b/src/modules/about-us-page/menu/index.module.scss
@@ -52,7 +52,7 @@
   @include desktop-lg {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 32px;
     z-index: 2;
 
     display: flex;
@@ -111,6 +111,7 @@
 
     margin-inline: 0;
     margin-left: auto;
+    padding-inline: 50px;
   }
 }
 
