--- a/src/modules/about-us-page/story/index.module.scss
+++ b/src/modules/about-us-page/story/index.module.scss
@@ -96,6 +96,8 @@ $gap-top: 182px;
   flex-direction: column;
   gap: 15px;
 
+  max-width: 500px;
+
   @include desktop-lg {
     margin-left: calc((100% - 608px) - $frame-width + 48px);
     margin-right: auto;
