--- a/src/modules/home-page/our-clients/index.module.scss
+++ b/src/modules/home-page/our-clients/index.module.scss
@@ -106,7 +106,7 @@
   @include desktop-lg {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 32px;
     z-index: 2;
 
     display: flex;
@@ -165,6 +165,7 @@
 
     margin-inline: 0;
     margin-left: auto;
+    padding-inline: 50px;
   }
 }
 
